{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 18,
  "lineage": "9cd4504a-5c82-5a19-c76f-092a26669120",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c2b472f212786081",
            "domain": "vpc",
            "id": "eipalloc-0c2b472f212786081",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-43-205-197-124.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.205.197.124",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip0"
            },
            "tags_all": {
              "Name": "eip0"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0808aafd4f6f701b0",
            "domain": "vpc",
            "id": "eipalloc-0808aafd4f6f701b0",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-7-221-142.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.7.221.142",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip1"
            },
            "tags_all": {
              "Name": "eip1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:299198044672:internet-gateway/igw-0a0482b4373364ce1",
            "id": "igw-0a0482b4373364ce1",
            "owner_id": "299198044672",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0674b1623596f1804"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c2b472f212786081",
            "connectivity_type": "public",
            "id": "nat-079441a7ae9cd26e6",
            "network_interface_id": "eni-08040554b123505cb",
            "private_ip": "10.0.0.187",
            "public_ip": "43.205.197.124",
            "subnet_id": "subnet-0d53d72b000769cff",
            "tags": {
              "Name": "nat0"
            },
            "tags_all": {
              "Name": "nat0"
            }
          },
          "dependencies": [
            "aws_eip.eip0",
            "aws_subnet.public0",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0808aafd4f6f701b0",
            "connectivity_type": "public",
            "id": "nat-0bef18e9dc3d1bea3",
            "network_interface_id": "eni-0a16ee5b2b6304c41",
            "private_ip": "10.0.1.40",
            "public_ip": "3.7.221.142",
            "subnet_id": "subnet-046e0219840ee6645",
            "tags": {
              "Name": "nat1"
            },
            "tags_all": {
              "Name": "nat1"
            }
          },
          "dependencies": [
            "aws_eip.eip1",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:299198044672:route-table/rtb-09b3bdf3d48b603d1",
            "id": "rtb-09b3bdf3d48b603d1",
            "owner_id": "299198044672",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-079441a7ae9cd26e6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private0"
            },
            "tags_all": {
              "Name": "private0"
            },
            "timeouts": null,
            "vpc_id": "vpc-0674b1623596f1804"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip0",
            "aws_nat_gateway.nat0",
            "aws_subnet.public0",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:299198044672:route-table/rtb-02f2a4183392006cf",
            "id": "rtb-02f2a4183392006cf",
            "owner_id": "299198044672",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bef18e9dc3d1bea3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private1"
            },
            "tags_all": {
              "Name": "private1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0674b1623596f1804"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip1",
            "aws_nat_gateway.nat1",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:299198044672:route-table/rtb-0b8877d23212e954c",
            "id": "rtb-0b8877d23212e954c",
            "owner_id": "299198044672",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a0482b4373364ce1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0674b1623596f1804"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d7b2e8b4fac5685",
            "route_table_id": "rtb-09b3bdf3d48b603d1",
            "subnet_id": "subnet-0dede15f0e3e8ed7c"
          },
          "dependencies": [
            "aws_eip.eip0",
            "aws_nat_gateway.nat0",
            "aws_route_table.private0",
            "aws_subnet.private0",
            "aws_subnet.public0",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb958c34ab193388",
            "route_table_id": "rtb-02f2a4183392006cf",
            "subnet_id": "subnet-096e6d797954dfbb7"
          },
          "dependencies": [
            "aws_eip.eip1",
            "aws_nat_gateway.nat1",
            "aws_route_table.private1",
            "aws_subnet.private1",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a277021ce5fa79f1",
            "route_table_id": "rtb-0b8877d23212e954c",
            "subnet_id": "subnet-0d53d72b000769cff"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public0",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3924ecb8486a664",
            "route_table_id": "rtb-0b8877d23212e954c",
            "subnet_id": "subnet-046e0219840ee6645"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:299198044672:subnet/subnet-0dede15f0e3e8ed7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dede15f0e3e8ed7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "299198044672",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private0"
            },
            "tags_all": {
              "Name": "private0"
            },
            "vpc_id": "vpc-0674b1623596f1804"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:299198044672:subnet/subnet-096e6d797954dfbb7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096e6d797954dfbb7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "299198044672",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private1"
            },
            "tags_all": {
              "Name": "private1"
            },
            "vpc_id": "vpc-0674b1623596f1804"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:299198044672:subnet/subnet-0d53d72b000769cff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d53d72b000769cff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "299198044672",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public0"
            },
            "tags_all": {
              "Name": "public0"
            },
            "vpc_id": "vpc-0674b1623596f1804"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:299198044672:subnet/subnet-046e0219840ee6645",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046e0219840ee6645",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "299198044672",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public1"
            },
            "tags_all": {
              "Name": "public1"
            },
            "vpc_id": "vpc-0674b1623596f1804"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:299198044672:vpc/vpc-0674b1623596f1804",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f2f88ec99dc80001",
            "default_route_table_id": "rtb-04f7d3e2d09b538b9",
            "default_security_group_id": "sg-0d236547798e711e4",
            "dhcp_options_id": "dopt-00d8206b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0674b1623596f1804",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04f7d3e2d09b538b9",
            "owner_id": "299198044672",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}